Bugfix -- Removed overflow, removed slack invite

--- a/css/main.scss
+++ b/css/main.scss
@@ -205,7 +205,7 @@ p {
   width:780px;
   max-width:100%;
   margin:0 auto;
-  height:310px;
+  height:300px;
   position: relative;
   overflow: hidden;
 
@@ -270,7 +270,7 @@ p {
   p.project-notes {
     float:none;
     clear:both;
-    padding:20px 0px 20px 30px;
+    padding:10px 0px 10px 30px;
   }
   div.project-tasks {
     height: 150px;
